# WySDL3_Minimal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WySDL3_Minimal.cbp  main.cpp  main.h
emscripten/: index.html
include/: wyconstant.h  wyrotatedsquare.h
src/: wyrotatedsquare.cpp
